new components added

--- a/src/app/topics/render2/render2.component.html
+++ b/src/app/topics/render2/render2.component.html
@@ -2,6 +2,7 @@
     <div class="container-fluid default-bar">
       <h2>What is Renderer2? What is a good use case example?</h2>
       <a href="https://netbasal.com/angular-2-explore-the-renderer-service-e43ef673b26c" target="_blank">I read this article here</a>
+      <a href="https://itnext.io/using-renderer2-in-angular-8f80da6756f8" target="_blank">medium</a>
      
       <hr>
     </div>
