--- a/src/app/topics/difference-elementreftemplaterefcontainerref/difference-elementreftemplaterefcontainerref.component.html
+++ b/src/app/topics/difference-elementreftemplaterefcontainerref/difference-elementreftemplaterefcontainerref.component.html
@@ -32,6 +32,7 @@
           <li><a href="https://stackoverflow.com/questions/53374430/difference-between-elementref-and-templateref-in-angular4" target="_blank">stackoverflow</a></li>
           <li><a href="https://indepth.dev/here-is-how-to-get-viewcontainerref-before-viewchild-query-is-evaluated/" target="_blank">indepth</a></li>
           <li><a href="https://angular.io/api/core/ViewContainerRef" target="_blank">angular.io</a></li>
+          <li><a href="https://medium.com/@kevinwkds/angular-views-and-references-element-template-viewcontainer-5cdcf6b21bdb" target="_blank">meduim</a></li>
       </ul>
     </div>
 </main>
