--- a/src/app/topics/rxjsextra/rxjsextra.component.html
+++ b/src/app/topics/rxjsextra/rxjsextra.component.html
@@ -2,6 +2,8 @@
     <div class="container-fluid default-bar">
       <h2>example of iif,defer,tap,finalize,mapto,distinct,pipe? what are their practical usage? please provide examples</h2>
       <a href="https://medium.com/javascript-everyday/7-things-you-might-not-know-about-rxjs-66e2e5d57df2" target="_blank">I read this article here</a>
+
+      <a href="https://itnext.io/understanding-rxjs-operators-ea4bc93d56e" target="_blank">RXJS Operators</a>
       <hr>
     </div>
 </main>
